[gd_scene load_steps=14 format=3 uid="uid://b1tvu6pk2rq7i"]

[ext_resource type="Texture2D" uid="uid://clb65foxv5hqy" path="res://assets/weapons/aoe_turret.png" id="1_cgeah"]
[ext_resource type="Script" uid="uid://chv4yxfb5l4as" path="res://scenes/weapons/aoe_turret.gd" id="1_kp6c7"]
[ext_resource type="Texture2D" uid="uid://bc7k1ta5olpu2" path="res://assets/weapons/bullets/red_bullet.png" id="2_kp6c7"]
[ext_resource type="Texture2D" uid="uid://td7gfb0mpirk" path="res://assets/weapons/bullets/blue_bullet.png" id="4_4skib"]
[ext_resource type="ButtonGroup" uid="uid://ml10hbm071e" path="res://scenes/weapons/bullet_selection.tres" id="4_cuc2o"]
[ext_resource type="Texture2D" uid="uid://molcwv6vnkkd" path="res://assets/weapons/bullets/green_bullet.png" id="5_cuc2o"]
[ext_resource type="AudioStream" uid="uid://cucpdagydmbvo" path="res://assets/sounds/turrent_building.ogg" id="5_f0vqr"]
[ext_resource type="AudioStream" uid="uid://chlm28avpyyba" path="res://assets/sounds/mouse_hover.ogg" id="7_a84fm"]
[ext_resource type="AudioStream" uid="uid://d16e4nmpmejhm" path="res://assets/sounds/mouse_click.ogg" id="8_f0vqr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wm1un"]
radius = 27.504545

[sub_resource type="CircleShape2D" id="CircleShape2D_4skib"]
radius = 150.0

[sub_resource type="Gradient" id="Gradient_3a5d7"]
interpolation_mode = 2
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cuc2o"]
gradient = SubResource("Gradient_3a5d7")
fill = 1
fill_from = Vector2(0.4871795, 0.51282054)
fill_to = Vector2(0.85470086, 0.11111111)

[node name="AOETurret" type="Node2D"]
script = ExtResource("1_kp6c7")
button_group = ExtResource("4_cuc2o")

[node name="MouseClickSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_f0vqr")
bus = &"SFX"

[node name="MouseHoverSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_a84fm")
bus = &"SFX"

[node name="TurrentBuildingSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_f0vqr")
bus = &"SFX"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_cgeah")
offset = Vector2(-0.39999962, 1)

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(-0.5, 0.5)
shape = SubResource("CircleShape2D_wm1un")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_4skib")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
scale = Vector2(3.25, 3.25)
texture = SubResource("GradientTexture2D_cuc2o")

[node name="TurretDetails" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(150, 56)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -72.0
offset_right = 158.0
offset_bottom = -16.0
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="TurretDetails"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TurretDetails/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TurretDetails/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TurretDetails/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Bullet Type"

[node name="HBoxContainer" type="HBoxContainer" parent="TurretDetails/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="red" type="TextureButton" parent="TurretDetails/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Deals fire damage over time"
toggle_mode = true
button_pressed = true
button_group = ExtResource("4_cuc2o")
texture_normal = ExtResource("2_kp6c7")
stretch_mode = 0

[node name="blue" type="TextureButton" parent="TurretDetails/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Slows enemies"
toggle_mode = true
button_group = ExtResource("4_cuc2o")
texture_normal = ExtResource("4_4skib")
stretch_mode = 0

[node name="green" type="TextureButton" parent="TurretDetails/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Deals poison damage over time"
toggle_mode = true
button_group = ExtResource("4_cuc2o")
texture_normal = ExtResource("5_cuc2o")
stretch_mode = 0

[connection signal="input_event" from="CollisionArea" to="." method="_on_collision_area_input_event"]
[connection signal="mouse_entered" from="CollisionArea" to="." method="_on_collision_area_mouse_entered"]
[connection signal="mouse_exited" from="CollisionArea" to="." method="_on_collision_area_mouse_exited"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
[connection signal="draw" from="DetectionArea" to="." method="_on_detection_area_draw"]
[connection signal="timeout" from="AttackCooldown" to="." method="attack"]
[connection signal="mouse_entered" from="TurretDetails/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/red" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TurretDetails/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/red" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="TurretDetails/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/red" to="." method="_on_color_button_pressed"]
[connection signal="mouse_entered" from="TurretDetails/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/blue" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TurretDetails/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/blue" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="TurretDetails/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/blue" to="." method="_on_color_button_pressed"]
[connection signal="mouse_entered" from="TurretDetails/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/green" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TurretDetails/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/green" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="TurretDetails/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/green" to="." method="_on_color_button_pressed"]
